--- a/main.css
+++ b/main.css
@@ -1,3 +1,26 @@
+
+table{
+border-collapse:collapse;
+border:1px solid #7b26eb;
+}
+
+table td{
+border:1px solid #7b26eb;
+}
+a:link {
+    color: chartreuse;
+    border:1px solid #7b26eb;
+    text-decoration: none;
+}
+
+a:visited {
+    color: chartreuse;
+    border:1px solid #7b26eb;
+    text-decoration: none;
+}
+
+    
+
 body{
 
     margin: 1000;
